[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spike-sorting-intan-to-pdf"
version = "0.1.0"
description = "Spike sorting with SpikeInterface - Output PDF files summarizing the analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Wireless Neural Interface Team"},
    {name = "Pierre He", email = "pierre.he@inserm.fr"},
    {name = "Mickaël Le Boulc'h", email = "mickael.le-boulc-h@inserm.fr"}
]
keywords = ["spike-sorting", "intan", "electrophysiology", "neuroscience", "spikeinterface"]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "spikeinterface>=0.103.2",
    "probeinterface",
    "numpy",
    "matplotlib",
]

[project.scripts]
spike-sorting-intan-to-pdf = "gui_run_pipeline:run_app"

[tool.setuptools.package-dir]
"" = "python_files"

[tool.setuptools]
py-modules = [
    "trigger_class",
    "timestamps_class",
    "sorter_class",
    "protocol_class",
    "intan_class",
    "probe_class",
    "pipeline_class",
    "pdf_generator_class",
    "gui_run_pipeline",
]
